fix spacing issue. make error flash larger

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -40,6 +40,8 @@ body
 
 #error {
   display: none;
+  padding: 25px;
+  border-radius: 5px;
 }
 
 /*Automatically capitalize city name*/
